Add AI-powered DevOps failure prediction feature
- Create DevOpsInsightController with /api/devops/healthCheck POST endpoint
- Implement DevOpsInsightService with complete analysis pipeline:
  * Fetch CloudWatch logs with error/warning filtering
  * Process logs: normalize, group, deduplicate, calculate trends
  * Fetch CloudWatch metrics (CPU, Memory)
  * AI analysis using Ollama (qwen2.5-coder:7b)
  * Generate failure predictions with likelihood and timeframe
  * Persist data to DynamoDB
- Create DynamoDB entities: LogSummary, MetricSnapshot, PredictionResult
- Extend ProjectConfiguration with logGroupNames, serviceNames, lastProcessedTimestamp
- Add DevOpsScheduledService for automated health checks every 10 minutes
- Enable @EnableScheduling in DevOpsAgentApplication
- Update DynamoDbConfig with new table beans
- Add comprehensive tests for controller, service, and scheduler
- Update README with complete API documentation and setup instructions
- Update application.properties with new table configurations